// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client credentials create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "25",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "name": "New Credential",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/credentials",
}
`;

exports[`client credentials getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/credentials",
}
`;

exports[`client credentials remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": undefined,
  "method": "DELETE",
  "url": "https://auth.globus.org/v2/api/clients/mock-client-id/credentials/mock-credential-id",
}
`;
